--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -12,25 +12,27 @@
 // to match your app's branding.
 // Tip: Use the "Theme Builder" on Quasar's documentation website.
 
-$primary   : #1976D2;
-$secondary : #26A69A;
-$accent    : #9C27B0;
+$primary: #1976D2;
+$secondary: #26A69A;
+$accent: #9C27B0;
 
-$dark      : #1D1D1D;
+$dark: #1D1D1D;
 
-$positive  : #21BA45;
-$negative  : #C10015;
-$info      : #31CCEC;
-$warning   : #F2C037;
+$positive: #21BA45;
+$negative: #C10015;
+$info: #31CCEC;
+$warning: #F2C037;
 
 //defined by me
-$primary   : #373e48ff;
-$secondary : #00112bff;
-$accent    : #d48e15ff;
+$primary: #373e48ff;
+$secondary: #00112b;
+$accent: #065d77;
 
-$dark      : #373e48ff;
+$dark: #373e48ff;
 
-$positive  : #21BA45;
-$negative  : #C10015;
-$info      : #31CCEC;
-$warning   : #F2C037;
+$positive: #21BA45;
+$negative: #C10015;
+$info: #31CCEC;
+$warning: #F2C037;
+
+$gradient: linear-gradient(180deg, $secondary, $accent, $secondary);
