created termometer component

--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -36,3 +36,5 @@ $info: #31CCEC;
 $warning: #F2C037;
 
 $gradient: linear-gradient(180deg, $secondary, $accent, $secondary);
+$temperature-gradient: linear-gradient(0deg, blue, green, yellow, red);
+
