--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -12,8 +12,8 @@
 // to match your app's branding.
 // Tip: Use the "Theme Builder" on Quasar's documentation website.
 
-$primary: #0e789b;
-$secondary: #ffa80d;
+$primary: #242931;
+$secondary: #ff7d26;
 $accent: #11b9d1;
 
 $dark: #242931;
